# Corn_segmentation

./: README.md
cornExtract/: cornExtract.cpp
data/: params.mat  pointcnn_test.mat  pointcnn_test.txt  pointcnn_test_stem_coeffs.txt  proc_1_normalizeTestdata.m  proc_3_reconstruct.m  remain.mat  save2txt.m
pointCNN/: test_seg.py  train_seg.py
pointCNN/pointcnn_seg/: myoptions_x8_2048_fps.py
pointCNN/save/: checkpoint  ckpt.zip.007
stemExtract/: CMakeLists.txt  stemExtract.cpp
